# fleuret

./: README.MD  answer_utils.py  baseline_tool_call.py  calculator.py  data_prep.py  eval_baseline.py  explore_gsm8k.py  grpo_reward.py  gsm8k_eval.py  load_gsm8k.py  load_model.py  mlflow.db  predictions_tool.jsonl  pyproject.toml  requirements.txt  show_errors.py  train_grpo.py  train_grpo_t4.py  train_qlora.py
mlruns/1/61c133ab43eb47abbc0d6a4e029dfa0c/artifacts/: predictions.jsonl
mlruns/1/74a9f60903204b449c0754c1f0ab48e4/artifacts/: predictions.jsonl
