[project]
name = "fleuret"
version = "0.1.0"
description = "SLM baseline evaluation on GSM8K with MLflow tracking"
readme = "README.MD"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.12",
    "transformers>=5.9",
    "accelerate>=1.13",
    "datasets>=4.8",
    "mlflow>=3.12",
    "peft>=0.13",
    "trl>=0.12",
    "bitsandbytes>=0.44; platform_system == 'Linux'",
]

[tool.uv]
package = false
